<resources>
    <string name="app_name">Quantum Reporting</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_report">New Report</string>


    <string name="view_reports">View Reports</string>
    <string name="view_results">View Results</string>
    <string name="pre_install">Pre-Install</string>
    <string name="hot">Hot</string>
    <string name="standard">Standard</string>
    <string name="non_standard">Non-Standard</string>
    <string name="view_customers">View Customers</string>
    <string name="title_activity_test_results">Test Results</string>
    <string name="title_activity_test_selection">Test Selection</string>
    <string name="test_selection_title">Test Selection</string>
    <string name="new_report_title">New Report Info</string>
    <string name="submit_button">Submit</string>
    <string name="test_type_selection_title">Test Type Selection</string>
    <string name="wca_checkbox">WCA</string>
    <string name="swb_checkbox">SWB</string>
    <string name="hc_analysis_check">HC Analysis</string>
    <string name="chromaticity_check">Chromaticity</string>
    <string name="bayer_check">Bayer</string>
    <string name="title_activity_lens_count">Lens Count</string>
    <string name="lens_count_title">Lens Counts</string>
    <string name="back_button_test">BACK</string>
    <string name="test_results_title">Test Results</string>
    <string name="title_activity_wca_results">WcaResultsActivity</string>

</resources>
