<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.lucassmith.quantumreporting.UI.TestSelectionActivity"
                android:background="@color/bg_blue">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:weightSum="100"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/leftVerticalTestSelectionLayout"
            android:layout_weight="50">

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wca_checkbox"
                android:id="@+id/wcaCheck"/>

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swb_checkbox"
                android:id="@+id/swbCheck"/>

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hc_analysis_check"
                android:id="@+id/hcAnalysisCheck"/>

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chromaticity_check"
                android:id="@+id/chromaticityCheck"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rightVerticalTestSelectionLayout"
            android:layout_weight="50">

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bayer_check"
                android:id="@+id/bayerCheck"/>

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New CheckBox"
                android:id="@+id/quvCheck"
                android:visibility="invisible"/>

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New CheckBox"
                android:id="@+id/qSunCheck"
                android:visibility="invisible"/>

            <CheckBox
                style="@style/SelectionTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New CheckBox"
                android:id="@+id/placeHolderCheck"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_selection_title"
        android:id="@+id/testSelectionTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/TitleTheme"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="100">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button_test"
            android:id="@+id/testSelectionBackButton"
            android:layout_weight="50"
            style="@style/ButtonTheme"
            android:layout_marginRight="2.5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/testSelectionSubmitButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/ButtonTheme"
            android:layout_weight="50"
            android:layout_marginLeft="2.5dp"/>
    </LinearLayout>
</RelativeLayout>
