<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lucassmith.quantumreporting.UI.NewReportActivity"
    android:background="@color/bg_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_report_title"
        android:id="@+id/newReportTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        style="@style/TitleTheme"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customerSelectSpinner"
        android:layout_below="@+id/newReportTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/quantum_customers"
        style="@style/SelectionTheme"
        android:background="#ffffffff"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/machineSelectSpinner"
        android:layout_below="@+id/customerSelectSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/customer_machines"
        style="@style/SelectionTheme"
        android:background="#ffffffff"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coatingSelectSpinner"
        android:layout_below="@+id/machineSelectSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/quantum_coatings"
        style="@style/SelectionTheme"
        android:background="#ffffffff"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coatingSelectSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/testTypeRadioGroup">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pre_install"
            android:id="@+id/preInstallRadio"
            android:layout_weight="50"
            style="@style/SelectionTheme"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot"
            android:id="@+id/hotRadio"
            android:layout_weight="50"
            style="@style/SelectionTheme"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_standard"
            android:id="@+id/nonStandardRadio"
            android:layout_weight="50"
            style="@style/SelectionTheme"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standard"
            android:id="@+id/standardRadio"
            android:layout_weight="50"
            style="@style/SelectionTheme"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="100">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button_test"
            android:id="@+id/newReportBackButton"
            android:layout_weight="50"
            style="@style/ButtonTheme"
            android:layout_marginRight="2.5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/reportInfoSubmitButton"
            style="@style/ButtonTheme"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="50"
            android:layout_marginLeft="2.5dp"/>

    </LinearLayout>

</RelativeLayout>
