<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.lucassmith.quantumreporting.UI.LensCountActivity"
                android:background="@color/bg_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lens_count_title"
        android:id="@+id/lensCountTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/TitleTheme"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lensCountTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:weightSum="96">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:layout_weight="16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wca_checkbox"
                android:id="@+id/wcaCountLabel"
                style="@style/SubtitleTheme"
                android:layout_weight="50"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wcaCountSpinner"
                android:entries="@array/lens_count"
                android:layout_weight="50"
                android:background="#ffffffff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:layout_weight="16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swb_checkbox"
                android:id="@+id/swbCountLabel"
                android:layout_weight="50"
                style="@style/SubtitleTheme"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/swbCountSpinner"
                android:entries="@array/lens_count"
                android:layout_weight="50"
                android:background="#ffffffff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:layout_weight="16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hc_analysis_check"
                android:id="@+id/hcAnalysisLabel"
                android:layout_weight="50"
                style="@style/SubtitleTheme"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hcCountSpinner"
                android:entries="@array/lens_count"
                android:layout_weight="50"
                android:background="#ffffffff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:layout_weight="16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chromaticity_check"
                android:id="@+id/chromaticityCountLabel"
                style="@style/SubtitleTheme"
                android:layout_weight="50"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chromaticityCountSpinner"
                android:entries="@array/lens_count"
                android:layout_weight="50"
                android:background="#ffffffff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:layout_weight="16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bayer_check"
                android:id="@+id/bayerCountLabel"
                android:layout_weight="50"
                style="@style/SubtitleTheme"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bayerCountSpinner"
                android:focusableInTouchMode="false"
                android:entries="@array/lens_count"
                android:layout_weight="50"
                android:background="#ffffffff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="16">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/submit_button"
                android:id="@+id/button"
                style="@style/ButtonTheme"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
