<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.lucassmith.quantumreporting.UI.SwbResultsActivity"
                android:background="@color/bg_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_results_title"
        android:id="@+id/testResultsTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/TitleTheme"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/currentTestTitle"
        android:layout_below="@+id/testResultsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        style="@style/TitleTheme"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/currentTestTitle"
        android:layout_above="@+id/resultsButtonLayout"
        android:weightSum="100"
        android:id="@+id/resultsInputLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:id="@+id/firstResultLayout"
            android:weightSum="7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="1"
                android:entries="@array/lens_count"
                android:background="#ffffffff"
                android:layout_marginRight="1.25dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_weight="1"
                android:entries="@array/lens_count"
                android:background="#ffffffff"
                android:layout_marginRight="1.25dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner4"
                android:layout_weight="1"
                android:entries="@array/lens_count"
                android:background="#ffffffff"
                android:layout_marginRight="1.25dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:layout_weight="1"
                android:entries="@array/lens_count"
                android:background="#ffffffff"
                android:layout_marginRight="1.25dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner6"
                android:layout_weight="1"
                android:entries="@array/lens_count"
                android:background="#ffffffff"
                android:layout_marginRight="1.25dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:layout_weight="1"
                android:entries="@array/lens_count"
                android:background="#ffffffff"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="100"
        android:id="@+id/resultsButtonLayout"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button_test"
            android:id="@+id/resultsBackButton"
            android:layout_weight="50"
            style="@style/ButtonTheme"
            android:layout_marginRight="2.5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/resultsSubmitButton"
            android:layout_weight="50"
            style="@style/ButtonTheme"
            android:layout_marginLeft="2.5dp"/>
    </LinearLayout>

</RelativeLayout>
